cmake_minimum_required(VERSION 3.10)
project(Wayventure)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
include_directories(include/)
add_executable(wayventure main.cc main_dungeon.cc inventory_mode.cc classes.cc draw.cc generate.cc bar.cc help_mode.cc inventory_modifier_mode.cc bar_additional.cc)
target_link_libraries(wayventure -ltcod -lSDL2 -lpthread -lz -ldl -static-libstdc++ -static-libgcc)